# Qt-App-experimentation

./: CMakeLists.txt
.github/workflows/: release.yml
include/: ButtonHandler.h  window.h
src/: ButtonHandler.cpp  main.cpp  window.cpp
